--- a/data/blog/tech/front-end/webfont-cls.mdx
+++ b/data/blog/tech/front-end/webfont-cls.mdx
@@ -1,12 +1,13 @@
 ---
 title: Webfont 和 CLS
 date: '2024-10-29'
-tags: []
-
+tags: ['web performance']
 draft: false
 summary: '如何减少 webfont 对 CLS 的影响'
 authors: []
 ---
+
+<TOCInline toc={props.toc} />
 
 ## 介绍
 
