--- a/data/blog/tech/front-end/TypeScript Decorator.mdx
+++ b/data/blog/tech/front-end/TypeScript Decorator.mdx
@@ -86,9 +86,9 @@ function withNationaity(target: any, property: string, descriptor: PropertyDescr
 
 在 tsconfig.json 中设置 `[emitDecoratorMetadata: true](https://www.typescriptlang.org/tsconfig#emitDecoratorMetadata)`可以让 Typescript 编译的时候附带上一些元信息。
 
-- <font style="color:rgb(163, 21, 21);">design:type 属性的类型</font>
-- <font style="color:rgb(163, 21, 21);">design:paramtypes 函数参数的类型列表, 可以用这个</font>
-- <font style="color:rgb(163, 21, 21);">design:returetype 函数的返回类型</font>
+- design:type 属性的类型
+- design:paramtypes 函数参数的类型列表, 可以用这个
+- design:returetype 函数的返回类型
 
 ### 依赖注入的实现
 
