generate tags and summay of all blogs

--- a/data/blog/tech/VSCode + Ubuntu Remote development.mdx
+++ b/data/blog/tech/VSCode + Ubuntu Remote development.mdx
@@ -2,9 +2,12 @@
 title: VSCode + Ubuntu Remote development
 date: 2024-12-26
 tags:
-  - TOOL
+  - 开发环境
+  - Node.js
+  - 工程化
 draft: false
-authors:
+authors: null
+summary: 通过 VSCode 远程开发，利用闲置的 Ubuntu 减轻 Mac 的计算压力，详细介绍了安装和配置步骤。
 ---
 
 手上的老 Mac 已经越来越“步履蹒跚”了，尤其是运行日常工作中维护了两年的一个大项目，CPU 和内存分分钟爆炸。正好公司发的 Thinkpad T14 一直闲置，遂想到利用 VSCode Remote development 的功能将一部份计算和内存压力分离出去，减轻自己 Mac 电脑的负担。
