--- a/data/blog/tech/front-end/CROS.mdx
+++ b/data/blog/tech/front-end/CROS.mdx
@@ -1,9 +1,13 @@
 ---
 title: CORS
-date: '2019-07-14'
-tags: ['web']
+date: 2019-07-14
+tags:
+  - 前端安全
+  - 跨平台开发
+  - 前端性能优化
 draft: false
 authors: []
+summary: CORS（跨域资源共享）是W3C规范，允许浏览器与服务器通过自定义HTTP头进行跨域请求，解决安全限制问题。
 ---
 
 通过xhr 实现ajax通信的一个主要限制是浏览器跨域安全策略，即xhr会拒绝发送跨域请求。
