--- a/data/blog/tech/front-end/HTTP2 的优势.mdx
+++ b/data/blog/tech/front-end/HTTP2 的优势.mdx
@@ -1,9 +1,13 @@
 ---
 title: HTTP2 的优势
-date: '2018-08-01'
-tags: ['web']
+date: 2018-08-01
+tags:
+  - 前端性能优化
+  - 前端安全
+  - 新技术趋势
 draft: false
 authors: []
+summary: HTTP2通过多路复用、首部压缩、服务端推送等特性，显著降低延迟并提高传输效率。
 ---
 
 > HTTP2 协议的目标是保持HTTP/1.x向后的语义兼容的情况下，降低网络延迟，提高传输效率。
