--- a/data/blog/tech/front-end/Mysql 事务和锁.mdx
+++ b/data/blog/tech/front-end/Mysql 事务和锁.mdx
@@ -1,9 +1,13 @@
 ---
 title: MySql 事务和锁
-date: '2022-11-11'
-tags: ['web']
+date: 2022-11-11
+tags:
+  - 数据库
+  - MySQL
+  - 事务
 draft: false
 authors: []
+summary: MySQL的事务和锁机制包括支持事务的InnoDB引擎、ACID特性、隔离级别及共享锁与排他锁的使用。
 ---
 
 ## 引擎区别
