--- a/data/blog/tech/front-end/Nest.js 初识.mdx
+++ b/data/blog/tech/front-end/Nest.js 初识.mdx
@@ -1,9 +1,13 @@
 ---
 title: Nest.js 初识
-date: '2023-01-23'
-tags: ['web']
+date: 2023-01-23
+tags:
+  - Node.js
+  - 新技术趋势
+  - 前端框架
 draft: false
 authors: []
+summary: NestJS 通过依赖注入管理模块、控制器和服务，支持静态和动态模块，提供多种注入方式及切面处理。
 ---
 
 NestJS 通过依赖注入(DI)的方式来管理`module` `controller` `service` 等各个系统组件，并且在 API 的请求到响应的过程抽离出了多个切面，`guard` `interceptor` `pipe` `filter` `middleware` 。
