--- a/data/blog/tech/front-end/Node.js ESM.mdx
+++ b/data/blog/tech/front-end/Node.js ESM.mdx
@@ -1,9 +1,13 @@
 ---
 title: Node.js ESM
-date: '202301-05-23'
-tags: ['web']
+date: 2023-05-23
+tags:
+  - Node.js
+  - TypeScript
+  - 前端测试
 draft: false
 authors: []
+summary: Node.js 从 v12 开始支持 ES Module，需通过特定方式加载和调试，Jest 测试也需配置。
 ---
 
 从`v12.0.0`开始，`Node.js`开始添加对 ES Module 的支持，可能需要通过`--experimental-vm-modules`标识来开启这个特性。
