--- a/data/blog/tech/front-end/TypeScript Decorator.mdx
+++ b/data/blog/tech/front-end/TypeScript Decorator.mdx
@@ -1,9 +1,13 @@
 ---
 title: TypeScirpt Decorator
-date: '2021-12-23'
-tags: ['web']
+date: 2021-12-23
+tags:
+  - TypeScript
+  - JavaScript
+  - 设计模式
 draft: false
 authors: []
+summary: TypeScript 装饰器可用于类、方法、属性等，支持元数据，便于实现依赖注入和设计模式。
 ---
 
 JavaScript 的 decorator 目前（2022.4.1）处于 [stage 2](https://github.com/tc39/proposal-decorators) 。可以被运用在
