--- a/data/blog/tech/front-end/TypeScript point.mdx
+++ b/data/blog/tech/front-end/TypeScript point.mdx
@@ -1,9 +1,14 @@
 ---
 title: TypeScript Point
-date: '2023-12-03'
-tags: ['web']
+date: 2023-12-03
+tags:
+  - TypeScript
+  - 新技术趋势
+  - 工程化
 draft: false
 authors: []
+summary: 本文介绍了 TypeScript 的多个特性，包括 `noEmitOnError`、`this` 类型、`void` 和
+  `undefined` 的区别、`unknown` 类型的使用、枚举的静态方法、类型推断等。
 ---
 
 ## --noEmitOnError
