--- a/data/blog/tech/front-end/esm-in-nodejs.mdx
+++ b/data/blog/tech/front-end/esm-in-nodejs.mdx
@@ -1,9 +1,12 @@
 ---
 title: Node.js 中的 ESM
-date: '2023-05-16'
-tags: ['node.js']
+date: 2023-05-16
+tags:
+  - Node.js
+  - 新技术趋势
+  - 前端测试
 draft: false
-summary: '在 node.js 中，如何使用 ES module'
+summary: Node.js 从 v12 开始支持 ES Module，介绍了加载、调试、测试 ESM 及其与 CommonJS 的互操作性问题。
 authors: []
 ---
 
