--- a/data/blog/tech/front-end/font-subset.mdx
+++ b/data/blog/tech/front-end/font-subset.mdx
@@ -1,9 +1,12 @@
 ---
 title: Font Subset
-date: '2024-10-31'
-tags: ['web performance']
+date: 2024-10-31
+tags:
+  - 前端性能优化
+  - Node.js
+  - 工程化
 draft: false
-summary: '如何减少 webfont 对 CLS 的影响'
+summary: 通过字体子集化减少中文字体文件大小，提升网页加载速度，使用fonttools和fontmin工具实现优化。
 authors: []
 ---
 
