--- a/data/blog/tech/front-end/jenkins publish over ssh.mdx
+++ b/data/blog/tech/front-end/jenkins publish over ssh.mdx
@@ -1,9 +1,13 @@
 ---
 title: jenkins publish over ssh
-date: '2023-11-02'
-tags: ['web']
+date: 2023-11-02
+tags:
+  - Node.js
+  - 工程化
+  - Jenkins
 draft: false
 authors: []
+summary: 使用Docker部署Jenkins并配置SSH发布，确保密钥生成和项目路径设置正确。
 ---
 
 ## docker 部署 jenkins
