--- a/data/blog/tech/front-end/server-render.mdx
+++ b/data/blog/tech/front-end/server-render.mdx
@@ -1,9 +1,13 @@
 ---
 title: 服务端渲染的简单理解
-date: '2019-03-24'
-tags: ['web']
+date: 2019-03-24
+tags:
+  - SEO
+  - Vue
+  - 服务端渲染
 draft: false
 authors: []
+summary: 服务端渲染有助于SEO和提高首屏加载速度，Vue项目可通过Nuxt框架简化实现，需注意钩子和数据获取。
 ---
 
 服务端渲染的好处：
