--- a/data/blog/tech/front-end/svg icon 在前端项目中的应用.mdx
+++ b/data/blog/tech/front-end/svg icon 在前端项目中的应用.mdx
@@ -1,9 +1,13 @@
 ---
 title: svg icon 在前端项目中的应用
-date: '2019-05-08'
-tags: ['web']
+date: 2019-05-08
+tags:
+  - SVG
+  - Webpack
+  - 用户体验优化
 draft: false
 authors: []
+summary: SVG图标在前端项目中具有无限放大、小文件和优良渲染性能的优势，适合用户体验优化。
 ---
 
 svg（可伸缩矢量图）已经被各大浏览器支持。它具有如下几个特点
