--- a/data/blog/tech/front-end/the-brief-view-of-travis-ci.mdx
+++ b/data/blog/tech/front-end/the-brief-view-of-travis-ci.mdx
@@ -1,9 +1,13 @@
 ---
 title: Travis CI 持续集成服务
-date: '2018-03-18'
-tags: ['web', 'font-end']
+date: 2018-03-18
+tags:
+  - Node.js
+  - 工程化
+  - 前端测试
 draft: false
 authors: []
+summary: Travis CI 是一种持续集成工具，依托 GitHub 提供自动化构建和测试，提升开发效率。
 ---
 
 在软件开发的过程中，有很大一部分的时间都是花在构建（build）和测试（test）上面。为了提高开发的效率，使用构建和测试的自动化工具就变得很有必要。 **travis ci **就是这样一种持续集成的工具，依托github平台的资源，它已经是份额最大的持续集成平台之一。
