--- a/data/blog/tech/front-end/the-browser-cache.mdx
+++ b/data/blog/tech/front-end/the-browser-cache.mdx
@@ -1,10 +1,13 @@
 ---
 title: The Browser Cache
-date: '2018-03-14'
-tags: ['web', 'font-end']
+date: 2018-03-14
+tags:
+  - 前端性能优化
+  - 调试技巧
+  - 工程化
 draft: false
 authors: []
-summary: '浏览器缓存的基本概念'
+summary: 浏览器缓存分为强缓存和协商缓存，强缓存使用Cache-Control等指令，协商缓存通过ETag和Last-Modified验证。
 ---
 
 ## 强缓存
