--- a/data/blog/tech/front-end/typescript-unittest-with-mocha.mdx
+++ b/data/blog/tech/front-end/typescript-unittest-with-mocha.mdx
@@ -1,9 +1,13 @@
 ---
 title: 使用 mocha 测试 TypeScript
-date: '2018-04-03'
-tags: ['web', 'font-end']
+date: 2018-04-03
+tags:
+  - TypeScript
+  - 前端测试
+  - 工程化
 draft: false
 authors: []
+summary: 使用mocha测试TypeScript需结合babel编译，注意默认导出问题，推荐使用具名导出以提高代码可读性。
 ---
 
 ## 使用 babel 编译 TypeScript 代码来进行测试
