--- a/data/blog/tech/front-end/using-fiddler-to-captuer-requests.mdx
+++ b/data/blog/tech/front-end/using-fiddler-to-captuer-requests.mdx
@@ -1,9 +1,13 @@
 ---
 title: Using Fiddler to Capture HTTP(S) Requests
-date: '2018-03-03'
-tags: ['tool']
+date: 2018-03-03
+tags:
+  - 调试技巧
+  - 前端安全
+  - 开发环境
 draft: false
 authors: []
+summary: Fiddler是一款用于捕获和分析HTTP(S)请求的调试代理工具，支持设置代理、查看请求响应及手机抓包。
 ---
 
 [Fiddler](https://www.telerik.com/fiddler)是一款适用于Windows 和 Linux的web调试代理软件。一般用来调试分析App/Browser应用内的HTTP(S)请求。
