--- a/data/blog/tech/front-end/webfont-cls.mdx
+++ b/data/blog/tech/front-end/webfont-cls.mdx
@@ -1,9 +1,12 @@
 ---
 title: Webfont 和 CLS
-date: '2024-10-29'
-tags: ['web performance']
+date: 2024-10-29
+tags:
+  - 前端性能优化
+  - 用户体验优化
+  - CSS
 draft: false
-summary: '如何减少 webfont 对 CLS 的影响'
+summary: webfont加载会导致CLS问题，通过使用合适的fallback字体和调整字体指标可减少影响，提高用户体验。
 authors: []
 ---
 
