--- a/data/blog/tech/front-end/了解 JsonWebToken.mdx
+++ b/data/blog/tech/front-end/了解 JsonWebToken.mdx
@@ -1,9 +1,13 @@
 ---
 title: 了解 JsonWebToken
-date: '2021-03-26'
-tags: ['web']
+date: 2021-03-26
+tags:
+  - 前端安全
+  - 新技术趋势
+  - 工程化
 draft: false
 authors: []
+summary: JWT（Json Web Token）是一种用于客户端与服务器鉴权的协议，具有去中心化和单点登录的优势，但需注意安全性和敏感信息管理。
 ---
 
 **JWT**(json web token)是一种开源的([RFC7519](https://tools.ietf.org/html/rfc7519))，工业级别的，用于客户端服务端鉴权的协议机制。
