--- a/data/blog/tech/front-end/作用域.mdx
+++ b/data/blog/tech/front-end/作用域.mdx
@@ -1,9 +1,13 @@
 ---
 title: JavaScript 作用域
-date: '2020-09-23'
-tags: ['web']
+date: 2020-09-23
+tags:
+  - JavaScript
+  - 前端性能优化
+  - 调试技巧
 draft: false
 authors: []
+summary: JavaScript 作用域基于静态作用域，使用执行上下文和词法环境，形成作用域链。闭包绑定词法环境，`with` 语句可扩展作用域链但影响性能。
 ---
 
 Javascript 把一段代码（包括函数）执行所需的所有信息称为 **执行上下文** 。执行上下文在各个版本中的 ECMAScript 中所表示的信息都不同。
