--- a/data/blog/tech/front-end/使用 npm 的一点心得.mdx
+++ b/data/blog/tech/front-end/使用 npm 的一点心得.mdx
@@ -1,9 +1,13 @@
 ---
 title: 是用 npm 的一点心得
-date: '2020-09-25'
-tags: ['web']
+date: 2020-09-25
+tags:
+  - Node.js
+  - 工程化
+  - 开发环境
 draft: false
 authors: []
+summary: 本文分享了使用npm的心得，包括设置淘宝源、安装流程、语义化版本控制、package-lock.json和yarn.lock的作用，以及如何从缓存安装依赖包。
 ---
 
 ## registry
