--- a/data/blog/tech/front-end/回流和重绘.mdx
+++ b/data/blog/tech/front-end/回流和重绘.mdx
@@ -1,9 +1,13 @@
 ---
 title: Reflow And Repaint
-date: '2020-02-12'
-tags: ['web']
+date: 2020-02-12
+tags:
+  - 前端性能优化
+  - 动画
+  - CSS
 draft: false
 authors: []
+summary: 网页性能瓶颈主要源于回流和重绘，优化方法包括简化样式计算、避免强制同步布局和使用合成层属性。
 ---
 
 网页的瓶颈一般出现在两个方面： Loading performance和 rending preformance。
