--- a/data/blog/tech/front-end/在 MySql 中使用空间数据类型.mdx
+++ b/data/blog/tech/front-end/在 MySql 中使用空间数据类型.mdx
@@ -1,9 +1,13 @@
 ---
 title: 在 MySql 中使用空间数据类型
-date: '2023-06-12'
-tags: ['web']
+date: 2023-06-12
+tags:
+  - 数据库
+  - 新技术趋势
+  - TypeScript
 draft: false
 authors: []
+summary: MySql 8.0 及以上支持空间数据类型，使用 SRID 定义坐标系，创建空间索引需指定 SRID。
 ---
 
 MySql 5.7 之后提供了 GIS 数据类型，但是如果想要使用一些地理函数，最好版本还是大于 8.0.
