--- a/data/blog/tech/front-end/密码如何存储.mdx
+++ b/data/blog/tech/front-end/密码如何存储.mdx
@@ -1,9 +1,13 @@
 ---
 title: 密码如何存储
-date: '2022-05-05'
-tags: ['web']
+date: 2022-05-05
+tags:
+  - 前端安全
+  - 数据库
+  - 密码存储
 draft: false
 authors: []
+summary: 密码存储应使用哈希和加盐技术以增强安全性，防止暴力破解和彩虹表攻击。
 ---
 
 **用户的密码如何存储在数据库中？**
