--- a/data/blog/tech/front-end/微前端框架 MicroApp 调研.mdx
+++ b/data/blog/tech/front-end/微前端框架 MicroApp 调研.mdx
@@ -1,9 +1,13 @@
 ---
 title: 微前端框架 MicroApp 调研
-date: '2023-07-27'
-tags: ['web']
+date: 2023-07-27
+tags:
+  - 微前端
+  - 前端框架
+  - 新技术趋势
 draft: false
 authors: []
+summary: 微前端框架MicroApp适用于独立系统组合和技术栈多样的场景，具备独立开发和部署的优势，但也增加了系统复杂性。
 ---
 
 ## 微前端的适用场景
