--- a/data/blog/tech/front-end/最近值得记录的一些小尝试.mdx
+++ b/data/blog/tech/front-end/最近值得记录的一些小尝试.mdx
@@ -1,9 +1,13 @@
 ---
 title: 最近值得记录的一些小尝试
-date: '2023-07-26'
-tags: ['web']
+date: 2023-07-26
+tags:
+  - PWA
+  - React Native
+  - 新技术趋势
 draft: false
 authors: []
+summary: 最近开发了一个休息提醒的PWA应用，使用React和TypeScript，集成了通知、热力图等功能，探索新技术。
 ---
 
 最近写了一个休息提醒的 PWA 的应用，用来设定工作一段时间后，提醒我要休息了。有点类似于番茄时钟。
