--- a/data/blog/tech/front-end/管道.mdx
+++ b/data/blog/tech/front-end/管道.mdx
@@ -1,9 +1,13 @@
 ---
 title: 管道
-date: '2023-10-31'
-tags: ['web']
+date: 2023-10-31
+tags:
+  - Node.js
+  - 前端框架
+  - 工程化
 draft: false
 authors: []
+summary: 管道是Linux中重要的通信机制，分为无名管道和有名管道，支持进程间数据传输。
 ---
 
 **管道是Linux中很重要的一种通信方式,是把一个程序的输出直接连接到另一个程序的输入。**
