--- a/data/blog/tech/front-end/让我们懂点儿HTTPS.mdx
+++ b/data/blog/tech/front-end/让我们懂点儿HTTPS.mdx
@@ -1,9 +1,13 @@
 ---
 title: 让我们懂点儿HTTPS
-date: '2019-09-23'
-tags: ['web']
+date: 2019-09-23
+tags:
+  - 前端安全
+  - Node.js
+  - 工程化
 draft: false
 authors: []
+summary: HTTPS通过SSL加密HTTP数据，确保传输安全。CA证书验证服务器身份，SSL证书通常收费，涉及高成本。
 ---
 
 通俗点来说，HTTPS就是HTTPS + SSL，即在SSL层（传输安全层）传输HTTP信息。和HTTP不同的是，HTTPS协议是在443端口而不是80端口上传输的。它传输加密的数据，比传输明文的HTTP更安全。
