--- a/data/blog/tech/自定义 VSCode copilot 指令.mdx
+++ b/data/blog/tech/自定义 VSCode copilot 指令.mdx
@@ -2,8 +2,11 @@
 title: 自定义 VSCode copilot 指令
 date: 2025-02-08
 lastmod: 2025-02-08
-tags: ['开发环境', '工程化', '调试技巧']
-summary: '本文介绍了四种自定义指令形式：代码生成、测试生成、代码审查和提交消息生成。通过VSCode设置全局指令，如代码风格和提交消息格式。也可单独指定指令，如i18n词条生成。遵循3S原则（简单、具体、简短）以提高与Copilot的交互效果。'
+tags:
+  - 开发环境
+  - 工程化
+  - 调试技巧
+summary: 本文介绍了如何自定义VSCode Copilot指令，强调3S原则以优化代码生成、测试和提交信息的交互效果。
 draft: false
 images: []
 ---
