--- a/data/blog/welcome.mdx
+++ b/data/blog/welcome.mdx
@@ -1,9 +1,12 @@
 ---
 title: 欢迎来到我的博客😝
-date: '2018-01-30'
-tags: []
+date: 2018-01-30
+tags:
+  - 前端性能优化
+  - 用户体验优化
+  - 新技术趋势
 draft: false
-summary: 'Welcomt to my blog!'
+summary: 本博客分享前端性能优化、用户体验优化及新技术趋势，记录生活与技术的点滴。
 authors: []
 ---
 
