--- a/data/blog/tech/front-end/JavaScript sourcemap.mdx
+++ b/data/blog/tech/front-end/JavaScript sourcemap.mdx
@@ -1,9 +1,13 @@
 ---
 title: JavaScript sourcemap
-date: '2022-04-29'
-tags: ['web']
+date: 2022-04-29
+tags:
+  - JavaScript
+  - Webpack
+  - 前端性能优化
 draft: false
 authors: []
+summary: 本文介绍了JavaScript的sourcemap，强调其对网页性能无影响，并详细解析了webpack中sourcemap的配置及其组成。
 ---
 
 先放一个 v3 的 [spec](https://docs.google.com/document/d/1U1RGAehQwRypUTovF1KRlpiOFze0b-_2gc6fAH0KY0k/edit) 。
