--- a/data/blog/tech/front-end/Mysql 基本使用.mdx
+++ b/data/blog/tech/front-end/Mysql 基本使用.mdx
@@ -1,9 +1,11 @@
 ---
 title: MySql 基础
-date: '2022-02-11'
-tags: ['web']
+date: 2022-02-11
+tags:
+  - 数据库
 draft: false
 authors: []
+summary: 本文介绍了MySQL的基本语句分类及常用命令，包括数据查询、操作、定义、控制语言等，适合初学者学习。
 ---
 
 ## 语句的分类
