--- a/data/blog/tech/front-end/生成随机 ID 字符串.mdx
+++ b/data/blog/tech/front-end/生成随机 ID 字符串.mdx
@@ -1,9 +1,13 @@
 ---
 title: 生成随机 ID 字符串
-date: '2020-08-14'
-tags: ['web']
+date: 2020-08-14
+tags:
+  - Node.js
+  - 前端安全
+  - 新技术趋势
 draft: false
 authors: []
+summary: 本文介绍了生成随机 ID 字符串的方法，强调了使用 node-hat 的局限性及其安全性问题，推荐使用 UUID 或 nanoid 作为更安全的替代方案。
 ---
 
 ## node-hat
