--- a/data/blog/tech/front-end/访问 Nginx 资源 403 问题.mdx
+++ b/data/blog/tech/front-end/访问 Nginx 资源 403 问题.mdx
@@ -1,9 +1,13 @@
 ---
 title: 访问 Nginx 资源 403 问题
-date: '2021-11-01'
-tags: ['web']
+date: 2021-11-01
+tags:
+  - 前端安全
+  - Nginx
+  - Linux
 draft: false
 authors: []
+summary: Nginx 403 错误可能由权限问题或 SELinux 设置引起，需检查文件权限和上下文一致性。
 ---
 
 > linux version: CentOS Linux release 7.9.2009 (Core)
