--- a/data/blog/tech/front-end/配置Babel preset env.mdx
+++ b/data/blog/tech/front-end/配置Babel preset env.mdx
@@ -1,9 +1,14 @@
 ---
 title: 配置 babel preset env
-date: '2019-08-11'
-tags: ['web']
+date: 2019-08-11
+tags:
+  - JavaScript
+  - Webpack
+  - 工程化
 draft: false
 authors: []
+summary: 本文介绍了如何配置 Babel 的 preset-env，包括在 package.json 或 .babelrc 文件中设置
+  presets、targets 和 polyfills 的方法。
 ---
 
 babel的配置可以[写在 package.json](https://babel.bootcss.com/docs/usage/babelrc/#%E9%80%9A%E8%BF%87-packagejson-%E4%BD%BF%E7%94%A8-babelrc)中，如下面
