--- a/data/blog/tech/如何查看 LangChain.js 发出的请求.mdx
+++ b/data/blog/tech/如何查看 LangChain.js 发出的请求.mdx
@@ -1,9 +1,9 @@
 ---
 title: 如何查看 LangChain.js 发出的请求
-date: 2025-02-16
-lastmod: 2025-02-16
-tags: ['LangChain']
-summary: '为了调试 LangChain 请求信息，可以设置 `DEBUG=true` 查看请求，或使用自定义 fetch 拦截请求与响应，也可通过代理工具监测 HTTP 信息。'
+date: 2025-03-02
+lastmod: 2025-03-02
+tags: ['调试技巧', 'Node.js', '新技术趋势']
+summary: '为了调试 LangChain 请求信息，可以设置环境变量 `DEBUG=true`，使用自定义 fetch 或代理工具监测 HTTP 请求。'
 draft: false
 images: []
 ---
