--- a/data/blog/tech/自定义 VSCode copilot 指令.mdx
+++ b/data/blog/tech/自定义 VSCode copilot 指令.mdx
@@ -1,12 +1,9 @@
 ---
 title: 自定义 VSCode copilot 指令
-date: 2025-02-08
-lastmod: 2025-02-08
-tags:
-  - 开发环境
-  - 工程化
-  - 调试技巧
-summary: 本文介绍了如何自定义VSCode Copilot指令，强调3S原则以优化代码生成、测试和提交信息的交互效果。
+date: 2025-03-02
+lastmod: 2025-03-02
+tags: ['TypeScript', '工程化', '前端测试']
+summary: '本文介绍了如何通过 VSCode 设置自定义 Copilot 的上下文信息，包括代码生成、测试生成、代码审查和提交信息生成的指令。使用 3S 原则（简单、具体、简短）可以提升与 Copilot 的交互效果。'
 draft: false
 images: []
 ---
