--- a/data/blog/tech/front-end/the-brief-view-of-travis-ci.mdx
+++ b/data/blog/tech/front-end/the-brief-view-of-travis-ci.mdx
@@ -83,13 +83,15 @@ jobs:
 
 1. 首选我们在npm上面授权accesstoken。
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2020/png/438262/1586173323291-c20fa37d-7008-4fb3-b528-581303c983ab.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
