--- a/data/blog/tech/front-end/在 MySql 中使用空间数据类型.mdx
+++ b/data/blog/tech/front-end/在 MySql 中使用空间数据类型.mdx
@@ -40,23 +40,27 @@ SELECT ST_SRID(geometry_column) FROM your_table LIMIT 1;
 
 **SRID** 指定的是 spatial 数据的坐标系。定义了大地水准面，椭球体，大地基准面，经纬度方向等。
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2024/png/438262/1710813841996-de2ebd0f-b462-4a58-819a-6fe85edd91f9.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>{' '}
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2024/png/438262/1710813832026-3dfd24fd-0617-4636-901a-accbf1226362.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>{' '}
 
