--- a/data/blog/tech/front-end/微前端框架 MicroApp 调研.mdx
+++ b/data/blog/tech/front-end/微前端框架 MicroApp 调研.mdx
@@ -40,13 +40,15 @@ summary: 微前端框架MicroApp适用于独立系统组合和技术栈多样的
 
 ### 大体流程
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="画板"
     src="https://cdn.nlark.com/yuque/0/2023/jpeg/438262/1686794248420-cd30198c-64df-404f-a039-db730417cc5a.jpeg"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
