--- a/data/blog/tech/front-end/管道.mdx
+++ b/data/blog/tech/front-end/管道.mdx
@@ -20,13 +20,15 @@ summary: 管道是Linux中重要的通信机制，分为无名管道和有名管
 
 在Linux中，管道是一种使用非常频繁的通信机制。从本质上说，管道也是一种文件，但它又和一般的文件有所不同，实际上比如我们看一个有名管道文件的属性如下：
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2023/png/438262/1698711310554-ea305cef-b794-4ccf-b1e0-90aaaa996ff6.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>{' '}
 
