--- a/data/blog/tech/front-end/jenkins publish over ssh.mdx
+++ b/data/blog/tech/front-end/jenkins publish over ssh.mdx
@@ -1,6 +1,6 @@
 ---
 title: jenkins publish over ssh
-date: 2023-11-02
+date: 2019-11-02
 tags:
   - Node.js
   - 工程化
@@ -20,13 +20,15 @@ docker run -d -p 8080:8080 -p 50000:50000 jenkins/jenkins:lts-jdk11
 
 然后访问 `host:8080`进入欢迎页面，一开始，jenkins会要求你输入密钥。这个密钥存在 jenkins 容器里的以下位置。
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2022/png/438262/1648567279637-bfed5901-617a-4d26-b14f-12369d5d74ab.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
@@ -36,13 +38,15 @@ docker run -d -p 8080:8080 -p 50000:50000 jenkins/jenkins:lts-jdk11
 
 在插件管理页面选中安装。
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2022/png/438262/1648574021717-55fd413c-f67b-4ab1-a1fb-33f365309582.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
@@ -50,13 +54,15 @@ docker run -d -p 8080:8080 -p 50000:50000 jenkins/jenkins:lts-jdk11
 
 然后在系统配置中，找到 publish over ssh 版块（在安装了该插件自动会出现），配置对应的要发布的 server.
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2022/png/438262/1648574196806-28bc2bfa-c177-47a9-ad12-af4d68e9ed6a.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
@@ -64,13 +70,15 @@ docker run -d -p 8080:8080 -p 50000:50000 jenkins/jenkins:lts-jdk11
 
 那么你可以将认证私钥配置在这里。
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2022/png/438262/1648574330993-3353d8f7-1b0a-48c5-99aa-d223774345c7.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
@@ -84,13 +92,15 @@ ssh-keygen -m PEM -t rsa -b 4096 -C "xxx@xxx.com"
 
 ### 项目配置
 
-<div className="relative h-[400px]">
+<div className="relative max-h-[400px] max-w-full">
   <Image
     style={{ objectFit: 'contain' }}
-    className="my-0"
+    className="my-0 h-auto max-h-[400px] w-auto max-w-full"
     alt="fiddler screenshot"
     src="https://cdn.nlark.com/yuque/0/2022/png/438262/1648574609886-843242be-6c0a-4b1a-8f92-6e9a40359d28.png"
-    fill={true}
+    width={0}
+    height={0}
+    sizes="100vw"
   />
 </div>
 
