--- a/data/blog/tech/【解决】Vue devtools 中的 open in editor 不起作用.mdx
+++ b/data/blog/tech/【解决】Vue devtools 中的 open in editor 不起作用.mdx
@@ -16,7 +16,7 @@ images: []
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250701105350.png"
+    alt="Pasted image 20250701105350"
     src="/static/images/blog/Pasted image 20250701105350.png"
     width={0}
     height={0}
@@ -32,7 +32,7 @@ images: []
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250702101929.png"
+    alt="Pasted image 20250702101929"
     src="/static/images/blog/Pasted image 20250702101929.png"
     width={0}
     height={0}
@@ -101,7 +101,7 @@ function launchEditor(file, specifiedEditor, onErrorCallback) {
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250701143653.png"
+    alt="Pasted image 20250701143653"
     src="/static/images/blog/Pasted image 20250701143653.png"
     width={0}
     height={0}
@@ -117,7 +117,7 @@ function launchEditor(file, specifiedEditor, onErrorCallback) {
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250701144031.png"
+    alt="Pasted image 20250701144031"
     src="/static/images/blog/Pasted image 20250701144031.png"
     width={0}
     height={0}
@@ -133,7 +133,7 @@ function launchEditor(file, specifiedEditor, onErrorCallback) {
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250701144838.png"
+    alt="Pasted image 20250701144838"
     src="/static/images/blog/Pasted image 20250701144838.png"
     width={0}
     height={0}
