--- a/data/blog/tech/自定义 VSCode copilot 指令.mdx
+++ b/data/blog/tech/自定义 VSCode copilot 指令.mdx
@@ -104,7 +104,7 @@ Copilot 会在之后的每一次 generation 操作中附加这些额外的上下
 
 <div className="flex justify-center">
   <Image
-    alt="Copilot i18n generation.png"
+    alt="Copilot i18n generation"
     src="/static/images/blog/Copilot i18n generation.png"
     width={0}
     height={0}
