--- a/data/blog/tech/解决 Cursor 地区限制的问题.mdx
+++ b/data/blog/tech/解决 Cursor 地区限制的问题.mdx
@@ -29,7 +29,7 @@ Cursor 限制地区后，来自中国大陆的 IP 流量一律不能使用 Gemin
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250725150722.png"
+    alt="Pasted image 20250725150722"
     src="/static/images/blog/Pasted image 20250725150722.png"
     width={0}
     height={0}
@@ -43,7 +43,7 @@ Cursor 限制地区后，来自中国大陆的 IP 流量一律不能使用 Gemin
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250725150916.png"
+    alt="Pasted image 20250725150916"
     src="/static/images/blog/Pasted image 20250725150916.png"
     width={0}
     height={0}
@@ -72,7 +72,7 @@ Cursor 限制地区后，来自中国大陆的 IP 流量一律不能使用 Gemin
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250725164905.png"
+    alt="Pasted image 20250725164905"
     src="/static/images/blog/Pasted image 20250725164905.png"
     width={0}
     height={0}
@@ -86,7 +86,7 @@ Cursor 限制地区后，来自中国大陆的 IP 流量一律不能使用 Gemin
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250725165048.png"
+    alt="Pasted image 20250725165048"
     src="/static/images/blog/Pasted image 20250725165048.png"
     width={0}
     height={0}
@@ -123,7 +123,7 @@ TUN 模式的核心思想是在操作系统层面创建一个虚拟网卡（TUN 
 
 <div className="flex justify-center">
   <Image
-    alt="Pasted image 20250725172859.png"
+    alt="Pasted image 20250725172859"
     src="/static/images/blog/Pasted image 20250725172859.png"
     width={0}
     height={0}
