--- a/data/blog/tech/ollama 体验.mdx
+++ b/data/blog/tech/ollama 体验.mdx
@@ -116,7 +116,7 @@ ollama run deepseek-r1:1.5b
 
 <div className="flex justify-center">
   <Image
-    alt="ollama run deepseekr1-1.5b.png"
+    alt="ollama run deepseekr1-1.5b"
     src="/static/images/blog/ollama run deepseekr1-1.5b.png"
     width={0}
     height={0}
