--- a/data/blog/tech/如何查看 LangChain.js 发出的请求.mdx
+++ b/data/blog/tech/如何查看 LangChain.js 发出的请求.mdx
@@ -69,7 +69,7 @@ const model = new ChatOpenAI({
 
 <div className="flex justify-center">
   <Image
-    alt="proxyman network panel.png"
+    alt="proxyman network panel"
     src="/static/images/blog/proxyman network panel.png"
     width={0}
     height={0}
